syntax = "proto2";

package example.name_generator.proto.v1;

import "example/common/naming/proto/v1/naming.proto";

message GetRandomNameRequest {}

message GetRandomNameResponse {
  required example.common.naming.proto.v1.Name name = 1;
}
